# FlightAnalysis

./: README.md  baea_advanced.json  baea_unlim.json  create_schedules.py  imac_unlimited_2024.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: publish_pypi.yml
examples/: make_manoeuvre.py
examples/schedule_construction/: create_all.py  f3a_p25.py  f3auk_intermediate.py  make_manoeuvre.py
examples/schedules_construction/: AMA_Intermediate2024.py  AMA_Masters2024.py  a25.py  create_all.py  f25.py  f3a_p25.py  f3auk_Intermediate.py  f3auk_clubman.py  imac_unlimited_2024.py  make_manoeuvre.py  p23.py  p25.py
examples/scoring/: analysis_reprocess.py  f25_analysis.py  f3a_criteria_maker.py  judging.py  split_optimisation.py  temp.py  templates.py  track_measurement.py
flightanalysis/: __init__.py  manoeuvre.py  manoeuvre_analysis.py
flightanalysis/analysis/: __init__.py  analysis_json.py  el_analysis.py  man_analysis.py  sch_analysis.py
flightanalysis/base/: ref_funcs.py
flightanalysis/box/: __init__.py  box.py
flightanalysis/builders/: elbuilders.py  manbuilder.py
flightanalysis/data/: BAeAPower_unlimited2024.json  baeaglid_intermediate_schedule.json  baeapower_advanced2024_schedule.json  baeapower_unlimited2024_schedule.json  f25_schedule.json  f3a_a25_schedule.json  f3a_f25_schedule.json  f3a_p23_schedule.json  f3a_p25_schedule.json  f3auk_clubman_schedule.json  f3auk_inter_schedule.json  f3auk_intermediate_schedule.json  iac_advanced2024_schedule.json  nsrca_inter2024_schedule.json  p23_schedule.json  p25_schedule.json
flightanalysis/definition/: __init__.py  collectors.py  eldef.py  mandef.py  maninfo.py  manoption.py  manparm.py  scheddef.py  scheduleinfo.py
schedules_construction/: f3a_p25.py
scripts/: batch_analyse.py  collect_scores.py
tests/: test_analysis_json.py  test_box.py  test_criiteria.py  test_criteria.py  test_manparms.py  test_operations.py  test_subsetters.py  test_utils.py
(+230 files in other folders)
