[project]
name = "flightanalysis"
version="0.3.13"
description = "Python tools for Analysis of Flight Data"
readme = "README.md"
authors = [{ name = "Thomas David", email = "thomasdavid0@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastdtw>=0.3.4",
    "flightdata",
    "joblib>=1.4.2",
    "json-stream>=2.3.2",
    "loguru>=0.7.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pfc-geometry",
    "pfcschemas",
    "scipy>=1.14.1",
    "simplejson>=3.19.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pfc-geometry = { path="../geometry" , editable = true }
ardupilot_log_reader = { path="../ArdupilotLogReader" , editable = true }
flightdata = { path="../FlightData" , editable = true }
pfcschemas = { path = "../Schemas", editable = true }

[dependency-groups]
dev = ["ardupilot_log_reader", "pymavlink>=2.4.42", "pytest>=8.3.3"]
